@startuml
class "dbHandler" as C_0007180728308577750051
class C_0007180728308577750051 {
-dbHandler() : void
-~dbHandler() : void
..
{static} +GetInstance() : dbHandler *
+addFriend(const QString & u1, const QString & u2) : bool
+addFriendRequest(const QString & from, const QString & to) : bool
+areFriends(const QString & u1, const QString & u2) : bool
+availUsername(const QString &) : bool
+cleanReg() : void
{static} +destroyInstance() : void
+emailValidate(const QString & user, const QString & code) : bool
+getFriendRequests(const QString & u) : QStringList
+getFriendslist(const QString & user) : QStringList
+getMessages(const QString & u1, const QString & u2, int start = 0, int length = 50) : QString
+loginValidate(const QString & user, const QString & pass) : bool
+newUser(const QString & user, const QString & pass, const QString & email, bool perm = 0, bool autoval = 0) : QString
+removeFriend(const QString & u1, const QString & u2) : bool
+removeFriendRequest(const QString & from, const QString & to) : bool
+removeReg(const QString & user) : bool
+storeMessage(const QJsonObject &) : bool
+userExists(const QString &) : bool
__
-connection : MYSQL *
{static} -dbHandler_ : dbHandler *
-mysql : MYSQL
}
class "Server" as C_0007168929316485241399
class C_0007168929316485241399 {
-Server(QObject * parent = __null) : void
-Server(const Server &) = deleted : void
-~Server() : void
..
-operator=(const Server &) = deleted : Server &
..
{static} +destroyInstance() : void
{static} +getInstance() : Server *
+metaObject() const : const QMetaObject *
-onNewConnection() : void
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
-update() : void
-writeToSocket(QTcpSocket * s, Protocol t, const QList<QJsonValue> & argv) : void
-writeToUserRaw(const QString & name, const QByteArray & data) : void
__
-db : dbHandler *
{static} -instance : Server *
-listener : QTcpServer *
-onlineUserMap : std::unordered_map<QString,QTcpSocket *>
{static} +staticMetaObject : const QMetaObject
-timer : QTimer *
}
C_0007180728308577750051 --> C_0007180728308577750051 : -dbHandler_
C_0007168929316485241399 --> C_0007180728308577750051 : -db
C_0007168929316485241399 --> C_0007168929316485241399 : -instance

'Generated with clang-uml, version 0.6.0
'LLVM version clang version 18.1.8 (Fedora 18.1.8-1.fc40)
@enduml
